rubocop/examples/bad/Style_SpaceBeforeSemicolon.rb
# TODO: Checks for semicolon (;) preceded by space.
